--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import "default.css";
 @import "container.css";
 @import "navigation.css";
+@import "menu-button.css";
 @import "section.css";
 @import "subtitle.css";
 @import "button.css";
