--- a/styles/container.css
+++ b/styles/container.css
@@ -9,3 +9,15 @@
     padding: 0 60px;
   }
 }
+
+@media (max-width: 1020px) {
+  .container {
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    padding: 0 20px;
+  }
+}
