--- a/styles/default.css
+++ b/styles/default.css
@@ -101,9 +101,23 @@ svg {
   width: 100%;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1425px) {
   body {
     font-size: 18px;
     line-height: 24px;
+  }
+}
+
+@media (max-width: 968px) {
+  body {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 640px) {
+  body {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
