--- a/styles/rest.css
+++ b/styles/rest.css
@@ -3,10 +3,6 @@
   padding-bottom: calc(50px + var(--central-offset));
 }
 
-.rest__title {
-  margin-bottom: 45px;
-}
-
 .rest__list {
   display: flex;
   flex-wrap: wrap;
@@ -16,12 +12,12 @@
 
 .rest__item {
   padding: 166px 40px 0;
-  height: 228px;
-  background-size: contain;
   flex-basis: 32%;
-  font-weight: 700;
+  height: 228px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
+  font-weight: 700;
   transition: scale .3s;
 }
 
@@ -69,24 +65,63 @@
     padding-top: 40px;
     padding-bottom: calc(35px + var(--central-offset));
   }
-  
-  .rest__title {
-    margin-bottom: 40px;
-  }
-  
+
   .rest__list {
     row-gap: 30px;
   }
-  
+
   .rest__item {
     padding: 114px 20px 0;
-    height: 172px;
     flex-basis: 32%;
-    font-weight: 700;
-    transition: scale .3s;
+    height: 172px;
+    font-size: 20px;
+    line-height: 28px;
   }
 
   .rest__item_movies {
     padding-top: 83px;
+  }
+}
+
+
+@media (max-width: 1010px) {
+  .rest {
+    --central-offset: 0;
+    padding-bottom: 30px;
+  }
+
+  .rest__list {
+    row-gap: 20px;
+  }
+
+  .rest__item {
+    padding: 132px 30px 0;
+    flex-basis: 49%;
+    height: 200px;
+  }
+}
+
+@media (max-width: 700px) {
+  .rest__item_audio,
+  .rest__item_movies {
+    padding-top: 95px;
+  }
+}
+
+@media (max-width: 480px) {
+  .rest {
+    padding-top: 23px;
+    padding-bottom: 15px;
+  }
+
+  .rest__list {
+    row-gap: 10px;
+  }
+
+  .rest__item {
+    padding: 30px 12px 0;
+    height: 75px;
+    font-size: 10px;
+    line-height: 14px;
   }
 }
