--- a/styles/rooms.css
+++ b/styles/rooms.css
@@ -10,22 +10,16 @@
 }
 
 .rooms__item {
-  padding: 94px 164px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 49%;
+  height: 352px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   text-align: center;
   text-transform: uppercase;
-}
-
-.rooms__link {
-  display: block;
-  margin: 0 auto;
-  max-width: 252px;
-  text-decoration: none;
-  font-size: 70px;
-  font-weight: 700;
-  line-height: 80px;
-  color: #fff;
 }
 
 .rooms__item_theme_80s {
@@ -44,16 +38,27 @@
   background-image: url("../img/neon-style.jpg");
 }
 
+.rooms__text {
+  display: block;
+  margin: 0 auto;
+  max-width: 252px;
+  text-decoration: none;
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 80px;
+  color: #fff;
+}
+
 @media (max-width: 1425px) {
   .rooms__list {
     justify-content: space-around;
   }
 
   .rooms__item {
-    padding: 74px 96px;
+    height: 267px;
   }
 
-  .rooms__link {
+  .rooms__text {
     font-size: 50px;
     line-height: 60px;
   }
@@ -67,22 +72,44 @@
 
 @media (max-width: 1280px) {
   .rooms {
-    padding-bottom: 70px;
-  }
-
-  .rooms__title {
-    margin-bottom: 35px;
+    padding-bottom: 71px;
   }
 }
 
 @media (max-width: 1015px) {
   .rooms__item {
-    padding: 60px 102px 38px;
+    height: 200px;
   }
 
-  .rooms__link {
+  .rooms__text {
     max-width: 130px;
     font-size: 40px;
     line-height: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  .rooms {
+    padding-bottom: 63px;
+  }
+}
+
+@media (max-width: 540px) {
+  .rooms {
+    padding-bottom: 30px;
+  }
+
+  .rooms__list {
+    row-gap: 10px;
+  }
+
+  .rooms__item {
+    flex-basis: 100%;
+    height: 168px;
+  }
+
+  .rooms__text {
+    font-size: 26px;
+    line-height: 34px;
   }
 }
