--- a/styles/section.css
+++ b/styles/section.css
@@ -7,3 +7,15 @@
     padding: 35px 0;
   }
 }
+
+@media (max-width: 1010px) {
+  .section {
+    padding: 30px 0;
+  }
+}
+
+@media (max-width: 640px) {
+  .section {
+    padding: 15px 0;
+  }
+}
