--- a/styles/subtitle.css
+++ b/styles/subtitle.css
@@ -11,9 +11,27 @@
 
 @media (max-width: 1280px) {
   .subtitle {
-    margin-bottom: 27px;
+    margin-bottom: 36px;
     max-width: 600px;
     font-size: 30px;
     line-height: 40px;
+  }
+}
+
+@media (max-width: 1020px) {
+  .subtitle {
+    margin-bottom: 30px;
+    max-width: 430px;
+    font-size: 24px;
+    line-height: 36px;
+  }
+}
+
+@media (max-width: 640px) {
+  .subtitle {
+    margin-bottom: 15px;
+    max-width: 250px;
+    font-size: 14px;
+    line-height: 18px;
   }
 }
