menu-button fix

--- a/styles/menu-button.css
+++ b/styles/menu-button.css
@@ -7,6 +7,10 @@
   color: var(--light-color);
 }
 
+.menu-button:focus {
+  outline: 1px solid var(--light-color);
+}
+
 .menu-button:focus,
 .menu-button:active {
   color: var(--light-average-color);
