--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -23,6 +23,69 @@
 
 @media (max-width: 1020px) {
   .navigation {
-    display: none;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: 0.1s ease-in-out;
+  }
+
+  .navigation_active {
+    visibility: visible;
+    opacity: 1;
+    z-index: 20;
+  }
+
+  .navigation__list {
+    position: absolute;
+    top: -320px;
+    left: 0;
+    right: 0;
+    padding: 60px 0;
+    background-color: #1B1A1B;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .navigation__item {
+    width: 100%;
+    height: 60px;
+  }
+
+  .navigation__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 22px;
+    line-height: 22px;
+    text-align: center;
+  }
+
+  .navigation__link:hover {
+    background-color: var(--main-color);
+  }
+
+  .navigation__link:active {
+    background-color: var(--light-color);
+  }
+}
+
+@media (max-width: 640px) {
+  .navigation__list {
+    top: -350px;
+    padding: 30px 0;
+  }
+
+  .navigation__link {
+    font-size: 14px;
+    line-height: 22px;
   }
 }
