--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -2,13 +2,8 @@
   margin-bottom: 48px;
 }
 
-.reviews__list {
-  padding: 0 100px;
-}
-
 .reviews__item {
   display: flex;
-  margin-bottom: 45px;
   gap: 20px;
 }
 
@@ -37,7 +32,7 @@
 }
 
 .reviews__image {
-  min-width: 280px;
+  width: 280px;
 }
 
 .reviews__name {
@@ -46,6 +41,13 @@
 
 .reviews__review-text {
   padding-top: 55px;
+  max-width: 680px;
+}
+
+@media (max-width: 1425px) {
+  .reviews__review-text {
+    max-width: 515px;
+  }
 }
 
 @media (max-width: 1280px) {
@@ -58,12 +60,11 @@
   }
 
   .reviews__item {
-    margin-bottom: 40px;
     gap: 38px;
   }
 
   .reviews__image {
-    min-width: 172px;
+    width: 172px;
   }
 
   .reviews__photo {
@@ -84,12 +85,7 @@
     margin-bottom: 35px;
   }
 
-  .reviews__list {
-    padding: 0 64px;
-  }
-
   .reviews__item {
-    margin-bottom: 32px;
     gap: 15px;
   }
 
@@ -102,7 +98,7 @@
   }
 
   .reviews__image {
-    min-width: 153px;
+    width: 153px;
   }
 
   .reviews__name {
@@ -111,7 +107,14 @@
   }
 
   .reviews__review-text {
+    max-width: 393px;
     padding-top: 28px;
+  }
+}
+
+@media (max-width: 788px) {
+  .reviews__review-text {
+    max-width: 280px;
   }
 }
 
@@ -122,10 +125,6 @@
 
   .reviews__title {
     margin-bottom: 9px;
-  }
-
-  .reviews__list {
-    padding: 0;
   }
 
   .reviews__item {
