--- a/styles/default.css
+++ b/styles/default.css
@@ -96,6 +96,11 @@ button::-moz-focus-inner {
   border: 0;
 }
 
+select:focus>option:checked {
+  color: white;
+  background: var(--main-color) !important;
+}
+
 svg {
   width: 100%;
 }
